--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>CSS stands for Cascading Style Sheets</li><br>
         <li>CSS describes how HTML elements are to be displayed on screen,paper,or in other media</li><br>
         <li><strike>CSS is not neccesary</strike><span style="background-color: yellow;"> CSS saves a lot of work.</span>It can control the layout of multiple web pages all at once</li><br>
-        <li class="uline">External stylesheets are stored in CSS files.</li><br>
+        <li class="uline"><em>External stylesheets are stored in CSS files.</em></li><br>
     </ol>
     <h2 class="heading">CSS can be added in HTML in 3 ways:</h2>
     <ul class="list1">
